1912 [One-Click] fixed handling of video input files without audio track. Bug #3159523

Changelog 0.3.5.0 --> 1911
Full changelog: http://megui.svn.sourceforge.net/viewvc/megui/megui/trunk/Changelog_full.txt

Main changes:
[Update] enhanced update detection. As a result all downloads need to be reapplied once!
[Update] added a warning about patents and binary files when megui finds updates
[x264] updated settings to reflect the recent x264 build
[DGIndexNV] added support for the recent build and removing therefore the CUVIDServer handling (requires at least DGIndexNV 2021)
[Update] added vobsub.dll and besplit
[One-Click] added support for DGIndexNV and DGAVCIndex
[VideoPlayer] added new control to speed up video navigation. Patch by aKzenT (#1902576)
[Flac] added flac encoding. Feature request #2930601
[Update] removed mencoder because pre-rendering job and snow are using now ffmpeg
improved M2TS bitrate calculation. Patch by Selur
[Audio Downmix] enhanced avisynth script in order to cover more input channel configurations. Patch by tebasuna51
changed version numbers to reflect the svn build numbers

Other changes:
[Adaptive Muxer] resized window so that the buttons at the bottom are visible again. Bug #3090155
[Audio Cutter] fixed problem with some non 7bit ASCII path/file names. Bug #3144278
[Audio Encoder] if the encoder only supports 2 output channels then "keep original channels" will be removed and the default value is "downmix multichannel to stereo"
[AudioEncoderInterface] fixed crash if input wav file is locked. Bug #3021693
[AudioEncodingWindow] some cosmetics
[AutoEncode] added option to always mux the video encoding (enabled by default). Feature request #3082125
[AutoEncode] added saving of the default mp4 device type to the "Configure AutoEncode defaults" in the settings
[AutoEncode] cosmetic bitrate rounding
[AutoEncode] the "always mux the video encoding" setting applies now only to mkv container. also renamed the option and added a tooltip